Updated to use latest webgl support libraries.

--- a/dev/index.html
+++ b/dev/index.html
@@ -21,8 +21,9 @@
     <link rel="manifest" href="manifest.json">
 </head>
 <body>
+<h1>WebGL Example</h1>
 <div id="app" class="app">
-    <canvas id="application-canvas" class="application-canvas"></canvas>
+    <canvas id="application-canvas" class="application-canvas" width="640" height="480"></canvas>
 </div>
 </body>
 </html>
