Started adding demonstration of full-screen API.

--- a/dev/index.html
+++ b/dev/index.html
@@ -25,5 +25,6 @@
 <div id="app" class="app">
     <canvas id="application-canvas" class="application-canvas" width="640" height="480"></canvas>
 </div>
+<button id="go-fullscreen">Full-Screen</button>
 </body>
 </html>
